<resources>
    <string name="app_name">Ebaak</string>
    <string name="logo_ebaak">Gambar Logo</string>

    <!--  Menu  -->
    <string name="menu1">Home</string>
    <string name="menu2">Riwayat</string>
    <string name="menu3">Bantuan</string>
    <string name="menu4">Akun</string>
    <string name="menu5">Registrasi Sidang</string>
    <string name="menu6">Layanan pendaftaran online sidang pendadaran.</string>
    <string name="menu7">Surat Keterangan</string>
    <string name="menu8">Registrasi surat keterangan mahasiswa</string>
    <string name="menu9">Cuti Akademik</string>
    <string name="menu10">Pengajuan permohonan untuk Cuti Akademik.</string>
    <string name="menu11">Aktif Kembali</string>
    <string name="menu12">Pengajuan permohonan untuk Aktif kembali di Akademik.</string>
    <string name="menu13">Surat Ijin Penelitian</string>
    <string name="menu14">Pengajuan permohonan untuk Surat Ijin Penelitian.</string>
    <string name="menu15">Kerja Praktek</string>
    <string name="menu16">Pengajuan permohonan untuk Surat Ijin Kerja praktek.</string>
    <string name="menu17">Pindah Kelas</string>
    <string name="menu18">Pengajuan permohonan untuk pindah kelas.</string>
    <string name="menu19">Pindah Program Studi</string>
    <string name="menu20">Pengajuan permohonan untuk pindah program studi.</string>
    <string name="menu21">Tanda Lulus</string>
    <string name="menu22">Pengajuan surat tanda lulus sementara.</string>
    <string name="menu23">Yudisium</string>
    <string name="menu24">Pengajuan Yudisium.</string>
    <!--  Halaman Splash  -->
    <string name="splash1">E-BaaK</string>
    <string name="splash2">Gambar Background Splash</string>
    <string name="splash3">Gambar Tombol Mulai</string>
    <!--  Halaman Daftar  -->
    <string name="daftar1">Email</string>
    <string name="daftar2">DAFTAR</string>
    <string name="daftar3">Nama Lengkap</string>
    <string name="daftar4">NPM</string>
    <string name="daftar5">Jurusan</string>
    <string name="daftar6">Password</string>
    <string name="daftar7">Tombol Daftar</string>
    <string name="daftar8">Sudah punya akun? Login</string>
    <!--  Halaman Login  -->
    <string name="login1">LOGIN</string>
    <string name="login2">Masukkan NPM</string>
    <string name="login3">Password</string>
    <string name="login4">Tombol Login</string>
    <string name="login5">Belum punya akun? Daftar</string>
    <!--  Halaman Home  -->
    <string name="home1">Gambar Icon</string>

    <!--  Surat Keterangan  -->
    <string name="sket1">NIP/NIK Orang Tua :</string>
    <string name="sket2">NIP/NIK Orang Tua</string>
    <string name="sket3">Nama Orang Tua/Wali :</string>
    <string name="sket4">Nama Orang Tua/Wali</string>
    <string name="sket5">Pekerjaan Orang Tua/Wali :</string>
    <string name="sket6">Pekerjaan Orang Tua/Wali</string>
    <string name="sket7">Keperluan Surat :</string>
    <string name="sket8">Keperluan Surat</string>
    <string name="sket9">UPLOAD FILE</string>
    <string name="sket10">REGISTRASI</string>
    <string name="sket11">Alamat :</string>
    <string name="sket12">Alamat</string>
    <string name="sket13">Link Google Drive(Rar/Zip)</string>
    <string name="sket14">Link Google Drive</string>

    <!--  Surat Sidang  -->
    <string name="sidang1">Judul :</string>
    <string name="sidang2">Judul</string>
    <string name="sidang3">Pembimbing :</string>
    <string name="sidang4">Pembimbing</string>
    <string name="sidang5">Penguji 1 :</string>
    <string name="sidang6">Penguji 1</string>
    <string name="sidang7">Penguji 2 :</string>
    <string name="sidang8">Penguji 2</string>
    <string name="sidang9">NIDN Pembimbing :</string>
    <string name="sidang10">NIDN Pembimbing</string>
    <string name="sidang11">Nomor SK Bimbingan :</string>
    <string name="sidang12">Nomor SK Bimbingan</string>
    <string name="sidang13">Tanggal SK Bimbingan :</string>
    <string name="sidang14">01–01–2021</string>
    <string name="sidang15">Tanggal ACC Sidang :</string>
    <string name="sidang16">Jumlah Bimbingan :</string>
    <string name="sidang17">Jumlah Bimbingan (1–20)</string>

    <!--  Cuti Akademik -->
    <string name="cuti1">Tahun Akademik :</string>
    <string name="cuti2">Genap 2021</string>
    <string name="cuti3">Alasan Cuti :</string>
    <string name="cuti4">Alasan Cuti</string>

    <!--  Aktif Akademik -->
    <string name="aktif1">Alasan Aktif :</string>
    <string name="aktif2">Alasan Aktif</string>

    <!--  Izin Penelitian -->
    <string name="penelitian1">Ditujukan Kepada :</string>
    <string name="penelitian2">Ditujukan Kepada</string>
    <string name="penelitian3">Nama Instansi/Perusahaan :</string>
    <string name="penelitian4">Nama Instansi/Perusahaan</string>
    <string name="penelitian5">Alamat Instansi/Perusahaan :</string>
    <string name="penelitian6">Alamat Instansi/Perusahaan</string>
    <string name="penelitian7">Judul Penelitian :</string>
    <string name="penelitian8">Judul Penelitian</string>
    <string name="penelitian9">Tanggal Mulai Penelitian :</string>
    <string name="penelitian10">01–01–2021</string>
    <string name="penelitian11">Tanggal Akhir Penelitian :</string>

    <!--  Izin Kerja Praktek -->
    <string name="kp1">Nama Instansi :</string>
    <string name="kp2">Nama Instansi</string>
    <string name="kp3">Surat Ditujukan Kepada :</string>
    <string name="kp4">Kepala/Direktur/Pimpinan/Rektor</string>
    <string name="kp5">Alamat Instansi :</string>
    <string name="kp6">Alamat Instansi</string>
    <string name="kp7">Tanggal Mulai :</string>
    <string name="kp8">01–01–2021</string>
    <string name="kp9">Tanggal Berakhir :</string>
    <string name="kp10">Keterangan :</string>
    <string name="kp11">Keterangan</string>

    <!--  Halaman Akun  -->
    <string name="akun1">Email</string>
    <string name="akun2">NPM</string>
    <string name="akun3">Nama Lengkap</string>
    <string name="akun4">Password</string>
    <string name="akun5">Update</string>
    <string name="akun6">Logout</string>
    <string name="akun7">Jurusan</string>

    <!--  Halaman Pindah Kelas  -->
    <string name="pindah1">Kelas Sebelumnya :</string>
    <string name="pindah2">Kelas Sebelumnya</string>
    <string name="pindah3">Alasan Pindah :</string>
    <string name="pindah4">Alasan Pindah</string>
    <string name="pindah5">Tanggal Pengajuan :</string>
    <string name="pindah6">01–01–2021</string>

    <!--  Halaman Pindah Prodi  -->
    <string name="prodi1">Pindah Ke Program Studi :</string>
    <string name="prodi2">Pindah Ke Program Studi</string>
    <string name="prodi3">Alasan Pindah :</string>
    <string name="prodi4">Alasan Pindah</string>

    <!--  Halaman Tanda Lulus  -->
    <string name="lulus1">Tempat Lahir :</string>
    <string name="lulus2">Tempat Lahir</string>
    <string name="lulus3">Tanggal Lahir :</string>
    <string name="lulus4">01–01–2021</string>

    <!--  Halaman Riwayat  -->
    <string name="riwayat1">01–01–2021</string>
    <string name="riwayat2">pending</string>
    <string name="riwayat3">Nama Surat</string>
    <string name="riwayat4">logo gambar icon</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>