<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".desain.Suratketerangan">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sket1"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etNikOrtu"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/sket2"
        android:drawableStart="@drawable/ic_nik"
        android:drawablePadding="10dp"
        android:autofillHints="@string/sket2"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sket3"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etNamaOrtu"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/sket4"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:autofillHints="@string/sket4"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sket5"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etPekerjaan"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/sket6"
        android:drawableStart="@drawable/ic_pekerjaan"
        android:drawablePadding="10dp"
        android:autofillHints="@string/sket6"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sket11"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etAlamat"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/sket12"
        android:drawableStart="@drawable/ic_alamat"
        android:drawablePadding="10dp"
        android:autofillHints="@string/sket12"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sket7"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etKeperluan"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/sket8"
        android:drawableStart="@drawable/ic_note"
        android:drawablePadding="10dp"
        android:autofillHints="@string/sket8"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sket13"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etLinkUpload"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/sket14"
        android:drawableStart="@drawable/ic_note"
        android:drawablePadding="10dp"
        android:autofillHints="@string/sket14"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistrasi"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/tombolSurat"
        android:text="@string/sket10"
        android:textColor="@color/white"
        android:layout_gravity="end"/>


</LinearLayout>