<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".desain.Kerjapraktek">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kp1"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtNamaInstansi"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/penelitian2"
            android:drawableStart="@drawable/ic_note"
            android:drawablePadding="10dp"
            android:autofillHints="@string/kp2"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kp3"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtDitujukan"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/kp4"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:autofillHints="@string/kp4"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kp5"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtAlamat"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/kp6"
            android:drawableStart="@drawable/ic_note"
            android:drawablePadding="10dp"
            android:autofillHints="@string/kp6"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kp7"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtTglMulai"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/kp8"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="10dp"
            android:autofillHints="@string/kp8"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kp9"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtTglBerakhir"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/kp8"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="10dp"
            android:autofillHints="@string/kp8"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kp10"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtKeterangan"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/kp11"
            android:drawableStart="@drawable/ic_note"
            android:drawablePadding="10dp"
            android:autofillHints="@string/kp11"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/buttonok"
            app:backgroundTint="@color/maroon"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_file_putih"
            android:text="@string/sket9"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistrasi"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/tombolSurat"
            android:text="@string/sket10"
            android:textColor="@color/white"
            android:layout_gravity="end"/>

    </LinearLayout>

</ScrollView>