<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".desain.SuratSidang">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang1"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang2"
                android:drawableStart="@drawable/ic_note"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang2"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang3"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang4"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang4"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang5"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang6"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang6"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang7"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang8"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang8"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang9"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang10"
                android:drawableStart="@drawable/ic_note"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang10"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang11"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang12"
                android:drawableStart="@drawable/ic_note"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang12"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang13"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang14"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang14"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang15"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang14"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang14"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sidang16"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sidang17"
                android:drawableStart="@drawable/ic_note"
                android:drawablePadding="10dp"
                android:autofillHints="@string/sidang17"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/tombolSurat"
                android:text="@string/sket10"
                android:textColor="@color/white"
                android:layout_gravity="end"/>

        </LinearLayout>
</ScrollView>