<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".desain.Pindahkelas">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah1"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtKelasSebelum"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/pindah2"
        android:drawableStart="@drawable/ic_note"
        android:drawablePadding="10dp"
        android:autofillHints="@string/pindah2"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah3"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtAlasan"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/pindah4"
        android:drawableStart="@drawable/ic_note"
        android:drawablePadding="10dp"
        android:autofillHints="@string/pindah4"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pindah5"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/txtTanggal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/pindah6"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        android:autofillHints="@string/pindah6"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/buttonok"
        app:backgroundTint="@color/maroon"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_file_putih"
        android:text="@string/sket9"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistrasi"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/tombolSurat"
        android:text="@string/sket10"
        android:textColor="@color/white"
        android:layout_gravity="end"/>

</LinearLayout>