<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgGrey"
    tools:context=".desain.Splashactivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/darmajaya"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_ebaak"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash1"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="400dp"
        android:contentDescription="@string/splash2"
        android:src="@drawable/bg_splash"/>
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash3"
        android:src="@drawable/tombol_mulai"/>

</LinearLayout>