<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".desain.Aktifakademik">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aktif1"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <EditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/aktif2"
        android:drawableStart="@drawable/ic_note"
        android:drawablePadding="10dp"
        android:autofillHints="@string/aktif2"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/tombolSurat"
        android:text="@string/sket10"
        android:textColor="@color/white"
        android:layout_gravity="end"/>

</LinearLayout>